--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -13,3 +13,18 @@ users.registered=Registered
 meals.title=Meals list
 
 common.select=Select
+meals.fdate=From Date
+meals.tdate=To Date
+meals.ftime=From Time
+meals.ttime=To Time
+meals.filter=Filter
+meals.add=Add Meal
+meals.date=Date
+meals.desc=Description
+meals.cal=Calories
+meals.upd=Update
+meals.del=Delete
+meals.datetime=DateTime
+app.save=Save
+app.cancel=Cancel
+
